WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
299634
[Screen Time] Unexpected power usage due to ScreenTimeWebExtension performing CA Commits when invisible
https://bugs.webkit.org/show_bug.cgi?id=299634
Summary
[Screen Time] Unexpected power usage due to ScreenTimeWebExtension performing...
Jessica Cheung
Reported
2025-09-26 14:35:45 PDT
rdar://156520177
Attachments
Add attachment
proposed patch, testcase, etc.
Jessica Cheung
Comment 1
2025-09-26 15:27:10 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/51412
EWS
Comment 2
2025-09-30 14:43:32 PDT
Committed
300778@main
(d10f7ce53734): <
https://commits.webkit.org/300778@main
> Reviewed commits have been landed. Closing PR #51412 and removing active labels.
EWS
Comment 3
2025-09-30 22:26:57 PDT
Committed
297297.493@safari-7622-branch
(00f048145285): <
https://commits.webkit.org/297297.493@safari-7622-branch
> Reviewed commits have been landed. Closing PR #3735 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug