Tools/TestWebKitAPI/Tests/WebKitCocoa/ScreenTime.mm
@@ -34,6 +34,7 @@
 #import "TestNavigationDelegate.h"
 #import "TestWKWebView.h"
 #import "Utilities.h"
+#import <ScreenTime/STScreenTimeConfiguration.h>
 #import <ScreenTime/STWebHistory.h>
 #import <ScreenTime/STWebpageController.h>
 #import <WebKit/WKPreferencesPrivate.h>
@@ -66,10 +67,19 @@ static RetainPtr<TestWKWebView> webViewForScreenTimeTests(WKWebViewConfiguration
     return adoptNS([[TestWKWebView alloc] initWithFrame:CGRectMake(0, 0, 400, 300) configuration:configuration addToWindow:addToWindow]);
 }
 
+static std::unique_ptr<InstanceMethodSwizzler> swizzleEnforcesChildRestrictions(bool& done, bool enforces = YES)
+{
+    return WTF::makeUnique<InstanceMethodSwizzler>(PAL::getSTScreenTimeConfigurationClassSingleton(), @selector(enforcesChildRestrictions), imp_implementationWithBlock(^BOOL {
+        done = true;
+        return enforces;
+    }));
+}
+
 static void testSuppressUsageRecordingWithDataStore(RetainPtr<WKWebsiteDataStore>&& websiteDataStore, bool suppressUsageRecordingExpectation)
 {
     __block bool done = false;
     __block bool suppressUsageRecording = false;
+    __block bool childRestrictionsDone = false;
 
     InstanceMethodSwizzler swizzler {
         PAL::getSTWebpageControllerClassSingleton(),
@@ -84,8 +94,11 @@ static void testSuppressUsageRecordingWithDataStore(RetainPtr<WKWebsiteDataStore
     [configuration setWebsiteDataStore:websiteDataStore.get()];
 
     RetainPtr webView = webViewForScreenTimeTests(configuration.get());
+
     RetainPtr request = [NSURLRequest requestWithURL:[NSURL URLWithString:@"http://webkit.org"]];
+    auto swizzle = swizzleEnforcesChildRestrictions(childRestrictionsDone);
     [webView synchronouslyLoadSimulatedRequest:request.get() responseHTMLString:@""];
+    TestWebKitAPI::Util::run(&childRestrictionsDone);
 
     TestWebKitAPI::Util::run(&done);
 
@@ -173,13 +186,17 @@ static BOOL systemScreenTimeBlockingViewIsPresent(TestWKWebView *webView)
 
 static RetainPtr<TestWKWebView> testShowsSystemScreenTimeBlockingView(bool showsSystemScreenTimeBlockingView)
 {
+    __block bool childRestrictionsDone = false;
+
     RetainPtr configuration = adoptNS([[WKWebViewConfiguration alloc] init]);
     [configuration setShowsSystemScreenTimeBlockingView:showsSystemScreenTimeBlockingView];
 
     RetainPtr webView = webViewForScreenTimeTests(configuration.get());
 
     RetainPtr request = [NSURLRequest requestWithURL:[NSURL URLWithString:@"http://webkit.org"]];
+    auto swizzle = swizzleEnforcesChildRestrictions(childRestrictionsDone);
     [webView synchronouslyLoadSimulatedRequest:request.get() responseHTMLString:@""];
+    TestWebKitAPI::Util::run(&childRestrictionsDone);
 
     [webView waitForNextPresentationUpdate];
 
@@ -200,12 +217,15 @@ static RetainPtr<TestWKWebView> testShowsSystemScreenTimeBlockingView(bool shows
 #if PLATFORM(MAC)
 static void testWebContentIsNotClickableShowingSystemScreenTimeBlockingView(bool showsSystemScreenTimeBlockingView)
 {
+    __block bool childRestrictionsDone = false;
+
     RetainPtr configuration = adoptNS([[WKWebViewConfiguration alloc] init]);
     [configuration setShowsSystemScreenTimeBlockingView:showsSystemScreenTimeBlockingView];
 
     RetainPtr webView = webViewForScreenTimeTests(configuration.get());
     RetainPtr observer = adoptNS([[BlockedStateObserver alloc] initWithWebView:webView.get()]);
 
+    auto swizzle = swizzleEnforcesChildRestrictions(childRestrictionsDone);
     [webView synchronouslyLoadHTMLString:
     @"<!DOCTYPE html>"
     "<html>"
@@ -222,6 +242,7 @@ static void testWebContentIsNotClickableShowingSystemScreenTimeBlockingView(bool
     "</body>"
     "</html>"
     ")" baseURL:[NSURL URLWithString:@"http://webkit.org"]];
+    TestWebKitAPI::Util::run(&childRestrictionsDone);
 
     [webView waitForNextPresentationUpdate];
 
@@ -246,9 +267,14 @@ static void testWebContentIsNotClickableShowingSystemScreenTimeBlockingView(bool
 
 TEST(ScreenTime, IsBlockedByScreenTimeTrue)
 {
+    __block bool childRestrictionsDone = false;
+
     RetainPtr webView = webViewForScreenTimeTests();
+
+    auto swizzle = swizzleEnforcesChildRestrictions(childRestrictionsDone);
     RetainPtr request = [NSURLRequest requestWithURL:[NSURL URLWithString:@"http://webkit.org"]];
     [webView synchronouslyLoadSimulatedRequest:request.get() responseHTMLString:@""];
+    TestWebKitAPI::Util::run(&childRestrictionsDone);
 
     [webView waitForNextPresentationUpdate];
 
@@ -260,9 +286,14 @@ TEST(ScreenTime, IsBlockedByScreenTimeTrue)
 
 TEST(ScreenTime, IsBlockedByScreenTimeFalse)
 {
+    __block bool childRestrictionsDone = false;
+
     RetainPtr webView = webViewForScreenTimeTests();
+
     RetainPtr request = [NSURLRequest requestWithURL:[NSURL URLWithString:@"http://webkit.org"]];
+    auto swizzle = swizzleEnforcesChildRestrictions(childRestrictionsDone);
     [webView synchronouslyLoadSimulatedRequest:request.get() responseHTMLString:@""];
+    TestWebKitAPI::Util::run(&childRestrictionsDone);
 
     [webView waitForNextPresentationUpdate];
 
@@ -274,9 +305,14 @@ TEST(ScreenTime, IsBlockedByScreenTimeFalse)
 
 TEST(ScreenTime, IsBlockedByScreenTimeMultiple)
 {
+    __block bool childRestrictionsDone = false;
+
     RetainPtr webView = webViewForScreenTimeTests();
+
     RetainPtr request = [NSURLRequest requestWithURL:[NSURL URLWithString:@"http://webkit.org"]];
+    auto swizzle = swizzleEnforcesChildRestrictions(childRestrictionsDone);
     [webView synchronouslyLoadSimulatedRequest:request.get() responseHTMLString:@""];
+    TestWebKitAPI::Util::run(&childRestrictionsDone);
 
     RetainPtr controller = [webView _screenTimeWebpageController];
     [controller setURLIsBlocked:YES];
@@ -289,11 +325,15 @@ TEST(ScreenTime, IsBlockedByScreenTimeMultiple)
 
 TEST(ScreenTime, IsBlockedByScreenTimeKVO)
 {
+    __block bool childRestrictionsDone = false;
+
     RetainPtr webView = webViewForScreenTimeTests();
     auto observer = adoptNS([[BlockedStateObserver alloc] initWithWebView:webView.get()]);
 
     RetainPtr request = [NSURLRequest requestWithURL:[NSURL URLWithString:@"http://webkit.org"]];
+    auto swizzle = swizzleEnforcesChildRestrictions(childRestrictionsDone);
     [webView synchronouslyLoadSimulatedRequest:request.get() responseHTMLString:@""];
+    TestWebKitAPI::Util::run(&childRestrictionsDone);
 
     [webView waitForNextPresentationUpdate];
 
@@ -325,6 +365,7 @@ TEST(ScreenTime, IdentifierNil)
 {
     __block bool done = false;
     __block NSString *identifier = @"testing123";
+    __block bool childRestrictionsDone = false;
 
     InstanceMethodSwizzler swizzler {
         PAL::getSTWebpageControllerClassSingleton(),
@@ -336,8 +377,11 @@ TEST(ScreenTime, IdentifierNil)
     };
 
     RetainPtr webView = webViewForScreenTimeTests();
+
     RetainPtr request = [NSURLRequest requestWithURL:[NSURL URLWithString:@"http://webkit.org"]];
+    auto swizzle = swizzleEnforcesChildRestrictions(childRestrictionsDone);
     [webView synchronouslyLoadSimulatedRequest:request.get() responseHTMLString:@""];
+    TestWebKitAPI::Util::run(&childRestrictionsDone);
 
     TestWebKitAPI::Util::run(&done);
 
@@ -348,6 +392,7 @@ TEST(ScreenTime, IdentifierString)
 {
     __block bool done = false;
     __block RetainPtr identifier = @"";
+    __block bool childRestrictionsDone = false;
 
     InstanceMethodSwizzler swizzler {
         PAL::getSTWebpageControllerClassSingleton(),
@@ -365,8 +410,11 @@ TEST(ScreenTime, IdentifierString)
     [configuration setWebsiteDataStore:websiteDataStore.get()];
 
     RetainPtr webView = webViewForScreenTimeTests(configuration.get());
+
     RetainPtr request = [NSURLRequest requestWithURL:[NSURL URLWithString:@"http://webkit.org"]];
+    auto swizzle = swizzleEnforcesChildRestrictions(childRestrictionsDone);
     [webView synchronouslyLoadSimulatedRequest:request.get() responseHTMLString:@""];
+    TestWebKitAPI::Util::run(&childRestrictionsDone);
 
     TestWebKitAPI::Util::run(&done);
 
@@ -377,6 +425,7 @@ TEST(ScreenTime, IdentifierStringWithRemoveData)
 {
     __block bool done = false;
     __block RetainPtr identifier = @"";
+    __block bool childRestrictionsDone = false;
 
     RetainPtr dataTypeScreenTime = adoptNS([[NSSet alloc] initWithArray:@[ WKWebsiteDataTypeScreenTime ]]);
 
@@ -395,7 +444,9 @@ TEST(ScreenTime, IdentifierStringWithRemoveData)
     RetainPtr webView = webViewForScreenTimeTests(configuration.get());
 
     RetainPtr request = [NSURLRequest requestWithURL:[NSURL URLWithString:@"http://icloud.com"]];
+    auto swizzle = swizzleEnforcesChildRestrictions(childRestrictionsDone);
     [webView synchronouslyLoadSimulatedRequest:request.get() responseHTMLString:@""];
+    TestWebKitAPI::Util::run(&childRestrictionsDone);
 
     [websiteDataStore removeDataOfTypes:dataTypeScreenTime.get() modifiedSince:[NSDate distantPast] completionHandler:^() {
         done = true;
@@ -440,7 +491,7 @@ TEST(ScreenTime, WKWebViewFillsStackView)
 {
     CGRect windowRect = CGRectMake(0, 0, 800, 600);
 
-    RetainPtr webView = webViewForScreenTimeTests(nil, NO);
+    RetainPtr webView = webViewForScreenTimeTests(nil);
     [webView setTranslatesAutoresizingMaskIntoConstraints:NO];
 
     RetainPtr request = [NSURLRequest requestWithURL:[NSURL URLWithString:@"http://webkit.org"]];
@@ -480,6 +531,8 @@ TEST(ScreenTime, WKWebViewFillsStackView)
 
 TEST(ScreenTime, URLIsPlayingVideo)
 {
+    __block bool childRestrictionsDone = false;
+
     RetainPtr webView = webViewForScreenTimeTests();
 
     RetainPtr contentHTML = @"<!DOCTYPE html><html><head></head><body><video src=\"video-with-audio.mp4\" webkit-playsinline></video></body></html>";
@@ -489,7 +542,9 @@ TEST(ScreenTime, URLIsPlayingVideo)
         { "/video-with-audio.mp4"_s, [NSData dataWithContentsOfURL:[NSBundle.test_resourcesBundle URLForResource:@"video-with-audio" withExtension:@"mp4"]] },
     }, TestWebKitAPI::HTTPServer::Protocol::Http);
 
+    auto swizzle = swizzleEnforcesChildRestrictions(childRestrictionsDone);
     [webView synchronouslyLoadRequest:server.requestWithLocalhost()];
+    TestWebKitAPI::Util::run(&childRestrictionsDone);
 
     [webView objectByEvaluatingJavaScript:@"function eventToMessage(event){window.webkit.messageHandlers.testHandler.postMessage(event.type);} var video = document.querySelector('video'); video.addEventListener('playing', eventToMessage); video.addEventListener('pause', eventToMessage);"];
 
@@ -531,6 +586,8 @@ TEST(ScreenTime, URLIsPlayingVideo)
 
 TEST(ScreenTime, URLIsPictureInPicture)
 {
+    __block bool childRestrictionsDone = false;
+
     RetainPtr configuration = adoptNS([[WKWebViewConfiguration alloc] init]);
     [configuration preferences]._allowsPictureInPictureMediaPlayback = YES;
 
@@ -557,8 +614,10 @@ TEST(ScreenTime, URLIsPictureInPicture)
 
     receivedLoadMessage = false;
 
+    auto swizzle = swizzleEnforcesChildRestrictions(childRestrictionsDone);
     [webView loadRequest:server.requestWithLocalhost()];
     TestWebKitAPI::Util::run(&receivedLoadMessage);
+    TestWebKitAPI::Util::run(&childRestrictionsDone);
 
     hasVideoInPictureInPictureValue = false;
     hasVideoInPictureInPictureCalled = false;
@@ -602,6 +661,8 @@ TEST(ScreenTime, WebContentIsNotClickableBehindBlurredBlockingView)
 
 TEST(ScreenTime, FetchData)
 {
+    __block bool childRestrictionsDone = false;
+
     __block RetainPtr<NSSet<NSURL *>> urls;
     InstanceMethodSwizzler swizzler {
         PAL::getSTWebHistoryClassSingleton(),
@@ -620,8 +681,11 @@ TEST(ScreenTime, FetchData)
     [configuration setWebsiteDataStore:websiteDataStore.get()];
 
     RetainPtr webView = webViewForScreenTimeTests(configuration.get());
+
     RetainPtr request = [NSURLRequest requestWithURL:[NSURL URLWithString:@"http://webkit.org"]];
+    auto swizzle = swizzleEnforcesChildRestrictions(childRestrictionsDone);
     [webView synchronouslyLoadSimulatedRequest:request.get() responseHTMLString:@""];
+    TestWebKitAPI::Util::run(&childRestrictionsDone);
 
     __block bool done = false;
     [websiteDataStore fetchDataRecordsOfTypes:dataTypeScreenTime.get() completionHandler:^(NSArray<WKWebsiteDataRecord *> *dataRecords) {
@@ -634,6 +698,8 @@ TEST(ScreenTime, FetchData)
 
 TEST(ScreenTime, RemoveDataWithTimeInterval)
 {
+    __block bool childRestrictionsDone = false;
+
     __block bool removedHistory = false;
     InstanceMethodSwizzler swizzler {
         PAL::getSTWebHistoryClassSingleton(),
@@ -652,8 +718,11 @@ TEST(ScreenTime, RemoveDataWithTimeInterval)
     [configuration setWebsiteDataStore:websiteDataStore.get()];
 
     RetainPtr webView = webViewForScreenTimeTests(configuration.get());
+
     RetainPtr request = [NSURLRequest requestWithURL:[NSURL URLWithString:@"http://webkit.org"]];
+    auto swizzle = swizzleEnforcesChildRestrictions(childRestrictionsDone);
     [webView synchronouslyLoadSimulatedRequest:request.get() responseHTMLString:@""];
+    TestWebKitAPI::Util::run(&childRestrictionsDone);
 
     __block bool done = false;
     [websiteDataStore removeDataOfTypes:dataTypeScreenTime.get() modifiedSince:[NSDate distantPast] completionHandler:^() {
@@ -667,6 +736,8 @@ TEST(ScreenTime, RemoveDataWithTimeInterval)
 
 TEST(ScreenTime, RemoveData)
 {
+    __block bool childRestrictionsDone = false;
+
     __block RetainPtr<NSSet<NSURL *>> fetchedURLs = adoptNS([[NSSet alloc] initWithArray:@[
         adoptNS([[NSURL alloc] initWithString:@"https://www.github.com/WebKit/WebKit"]).get(),
         adoptNS([[NSURL alloc] initWithString:@"https://www.github.com/APPLE"]).get(),
@@ -699,8 +770,11 @@ TEST(ScreenTime, RemoveData)
     [configuration setWebsiteDataStore:websiteDataStore.get()];
 
     RetainPtr webView = webViewForScreenTimeTests(configuration.get());
+
     RetainPtr request = [NSURLRequest requestWithURL:[NSURL URLWithString:@"https://www.github.com/WebKit/WebKit"]];
+    auto swizzle = swizzleEnforcesChildRestrictions(childRestrictionsDone);
     [webView synchronouslyLoadSimulatedRequest:request.get() responseHTMLString:@""];
+    TestWebKitAPI::Util::run(&childRestrictionsDone);
 
     __block bool done = false;
     [websiteDataStore fetchDataRecordsOfTypes:dataTypeScreenTime.get() completionHandler:^(NSArray<WKWebsiteDataRecord *> *dataRecords) {
@@ -719,9 +793,14 @@ TEST(ScreenTime, RemoveData)
 
 TEST(ScreenTime, OffscreenSystemScreenTimeBlockingView)
 {
+    __block bool childRestrictionsDone = false;
+
     RetainPtr webView = webViewForScreenTimeTests();
     RetainPtr request = [NSURLRequest requestWithURL:[NSURL URLWithString:@"http://webkit.org"]];
+
+    auto swizzle = swizzleEnforcesChildRestrictions(childRestrictionsDone);
     [webView synchronouslyLoadSimulatedRequest:request.get() responseHTMLString:@""];
+    TestWebKitAPI::Util::run(&childRestrictionsDone);
 
     [webView waitForNextPresentationUpdate];
 
@@ -740,12 +819,16 @@ TEST(ScreenTime, OffscreenSystemScreenTimeBlockingView)
 
 TEST(ScreenTime, OffscreenBlurredScreenTimeBlockingView)
 {
+    __block bool childRestrictionsDone = false;
+
     RetainPtr configuration = adoptNS([[WKWebViewConfiguration alloc] init]);
     [configuration setShowsSystemScreenTimeBlockingView:NO];
 
     RetainPtr webView = webViewForScreenTimeTests(configuration.get());
     RetainPtr request = [NSURLRequest requestWithURL:[NSURL URLWithString:@"http://webkit.org"]];
+    auto swizzle = swizzleEnforcesChildRestrictions(childRestrictionsDone);
     [webView synchronouslyLoadSimulatedRequest:request.get() responseHTMLString:@""];
+    TestWebKitAPI::Util::run(&childRestrictionsDone);
 
     [webView waitForNextPresentationUpdate];
 
@@ -774,8 +857,10 @@ TEST(ScreenTime, OffscreenBlurredScreenTimeBlockingView)
 #if PLATFORM(MAC)
 TEST(ScreenTime, DoNotDonateURLsInOccludedWebView)
 {
+    // FIXME: This test will fail if running on a full screen terminal window. It passes otherwise.
     __block bool suppressUsageRecording = false;
     __block bool done = false;
+    __block bool childRestrictionsDone = false;
 
     InstanceMethodSwizzler swizzler {
         PAL::getSTWebpageControllerClassSingleton(),
@@ -788,7 +873,9 @@ TEST(ScreenTime, DoNotDonateURLsInOccludedWebView)
 
     RetainPtr webView = webViewForScreenTimeTests();
     RetainPtr request = [NSURLRequest requestWithURL:[NSURL URLWithString:@"http://webkit.org"]];
+    auto swizzle = swizzleEnforcesChildRestrictions(childRestrictionsDone);
     [webView synchronouslyLoadSimulatedRequest:request.get() responseHTMLString:@""];
+    TestWebKitAPI::Util::run(&childRestrictionsDone);
 
     [webView waitForNextPresentationUpdate];
 
@@ -823,10 +910,12 @@ TEST(ScreenTime, DoNotDonateURLsInOccludedWebView)
 
 TEST(ScreenTime, CreateControllerAfterOffscreenWebViewBecomesInWindow)
 {
+    __block bool childRestrictionsDone = false;
     RetainPtr configuration = adoptNS([[WKWebViewConfiguration alloc] init]);
 
     RetainPtr webView = webViewForScreenTimeTests(configuration.get(), NO);
 
+    auto swizzle = swizzleEnforcesChildRestrictions(childRestrictionsDone);
     [webView synchronouslyLoadHTMLString: @"" baseURL:[NSURL URLWithString:@"http://webkit.org"]];
 
     [webView waitForNextPresentationUpdate];
@@ -834,12 +923,17 @@ TEST(ScreenTime, CreateControllerAfterOffscreenWebViewBecomesInWindow)
     EXPECT_FALSE(!![webView _screenTimeWebpageController]);
 
     [webView addToTestWindow];
+    TestWebKitAPI::Util::run(&childRestrictionsDone);
+    TestWebKitAPI::Util::waitFor([&] {
+        return !![webView _screenTimeWebpageController];
+    });
 
     EXPECT_TRUE(!![webView _screenTimeWebpageController]);
 }
 
 TEST(ScreenTime, ScreenTimeControllerSetsURLWhenOffscreenWebViewBecomesInWindow)
 {
+    __block bool childRestrictionsDone = false;
     RetainPtr configuration = adoptNS([[WKWebViewConfiguration alloc] init]);
 
     RetainPtr webView = webViewForScreenTimeTests(configuration.get(), NO);
@@ -851,17 +945,33 @@ TEST(ScreenTime, ScreenTimeControllerSetsURLWhenOffscreenWebViewBecomesInWindow)
 
     EXPECT_FALSE(!![webView _screenTimeWebpageController]);
 
+    auto swizzle = swizzleEnforcesChildRestrictions(childRestrictionsDone);
     [webView addToTestWindow];
+    TestWebKitAPI::Util::run(&childRestrictionsDone);
+
+    TestWebKitAPI::Util::waitFor([&] {
+        return !![webView _screenTimeWebpageController];
+    });
+
+    EXPECT_TRUE(!![webView _screenTimeWebpageController]);
+
+    TestWebKitAPI::Util::waitFor([&] {
+        return !![[webView _screenTimeWebpageController] URL];
+    });
 
     EXPECT_NOT_NULL([[webView _screenTimeWebpageController] URL]);
 }
 
 TEST(ScreenTime, ScreenTimeControllerInstalledAfterRestoreFromSessionState)
 {
+    __block bool childRestrictionsDone = false;
+
     RetainPtr webView1 = webViewForScreenTimeTests();
 
     RetainPtr request = [NSURLRequest requestWithURL:[NSURL URLWithString:@"http://webkit.org"]];
+    auto swizzle = swizzleEnforcesChildRestrictions(childRestrictionsDone);
     [webView1 synchronouslyLoadSimulatedRequest:request.get() responseHTMLString:@""];
+    TestWebKitAPI::Util::run(&childRestrictionsDone);
 
     RetainPtr sessionState = [webView1 _sessionState];
     [webView1 _close];
@@ -881,12 +991,15 @@ TEST(ScreenTime, ScreenTimeControllerInstalledAfterRestoreFromSessionState)
 
 TEST(ScreenTime, ScreenTimeControllerViewOnlyInstalledForHTTPFamily)
 {
+    __block bool childRestrictionsDone = false;
     RetainPtr configuration = adoptNS([[WKWebViewConfiguration alloc] init]);
     [configuration setShowsSystemScreenTimeBlockingView:YES];
 
     RetainPtr webView = webViewForScreenTimeTests(configuration.get());
 
     RetainPtr request = [NSURLRequest requestWithURL:[NSURL URLWithString:@""]];
+
+    auto swizzle = swizzleEnforcesChildRestrictions(childRestrictionsDone);
     [webView synchronouslyLoadSimulatedRequest:request.get() responseHTMLString:@""];
 
     [webView waitForNextPresentationUpdate];
@@ -901,10 +1014,25 @@ TEST(ScreenTime, ScreenTimeControllerViewOnlyInstalledForHTTPFamily)
 
     request = [NSURLRequest requestWithURL:[NSURL URLWithString:@"http://webkit.org"]];
     [webView synchronouslyLoadSimulatedRequest:request.get() responseHTMLString:@""];
+    TestWebKitAPI::Util::run(&childRestrictionsDone);
 
     [webView waitForNextPresentationUpdate];
 
     EXPECT_TRUE(systemScreenTimeBlockingViewIsPresent(webView.get()));
+}
+
+TEST(ScreenTime, ScreenTimeControllerNotInstalledForNoChildRestrictions)
+{
+    __block bool childRestrictionsDone = false;
+
+    RetainPtr webView = webViewForScreenTimeTests();
+    auto swizzle = swizzleEnforcesChildRestrictions(childRestrictionsDone, NO);
+    RetainPtr request = [NSURLRequest requestWithURL:[NSURL URLWithString:@"http://webkit.org"]];
+    [webView synchronouslyLoadSimulatedRequest:request.get() responseHTMLString:@""];
+
+    [webView waitForNextPresentationUpdate];
+
+    EXPECT_FALSE(!![webView _screenTimeWebpageController]);
 }
 
 #endif
